# drc-pay

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: .env.example  README.md  docker-entrypoint.sh  pyproject.toml
backend/migrations/versions/: a7c1e9f04b2d_add_transaction_provenance.py  c0a7b1d9e3f2_add_pawapay_ids_and_providers.py  c3e8f1a9b7d2_add_merchant_operator_till.py  e2f3a4b5c6d7_merchant_pivot_rename_tx_parties.py  e9b3c5d7f1a2_add_merchant_auth_tables.py  f1a2b3c4d5e6_add_staff_auth_tables.py
backend/scripts/: pawapay_smoke.py
backend/src/drc_pay_api/: __init__.py  config.py  container.py  create_staff.py  main.py  seed.py
backend/src/drc_pay_api/adapters/: __init__.py  memory.py  sql.py
backend/src/drc_pay_api/application/: onboarding.py  outcomes.py  payment_codes.py  payments.py  routing.py  staff_accounts.py  webhooks.py
backend/src/drc_pay_api/domains/auth/: __init__.py  models.py  service.py
backend/src/drc_pay_api/domains/charges/: models.py
backend/src/drc_pay_api/domains/ledger/: ledger.py  money.py
backend/src/drc_pay_api/domains/merchants/: __init__.py  models.py
backend/src/drc_pay_api/domains/staff/: models.py  service.py
backend/src/drc_pay_api/domains/transactions/: __init__.py  models.py  on_net.py  orchestrator.py  ports.py  pricing.py  state_machine.py
backend/src/drc_pay_api/http/: __init__.py  admin_merchants_routes.py  admin_routes.py  auth_routes.py  container.py  demo_routes.py  dependencies.py  merchant_api.py  onboarding_routes.py  public_routes.py  schemas.py  ussd_routes.py  webhook_routes.py
backend/src/drc_pay_api/integrations/airtel/: rail.py
backend/src/drc_pay_api/integrations/mpesa/: __init__.py
backend/src/drc_pay_api/integrations/pawapay/: __init__.py  callbacks.py  client.py  providers.py  rail.py  signatures.py  simulator.py  status.py
backend/src/drc_pay_api/jobs/: __init__.py
backend/src/drc_pay_api/jobs/reconciliation/: __init__.py  sweep.py
backend/src/drc_pay_api/ussd/: session.py
backend/tests/: conftest.py  fakes.py  pawapay_smoke.py  test_admin_merchants.py  test_auth.py  test_charges.py  test_console_assets.py  test_container.py  test_demo_console.py  test_http.py  test_ledger.py  test_merchants.py  test_money.py  test_on_net.py  test_on_net_facilitate.py  test_on_net_wiring.py  test_onboarding.py  test_orchestrator.py  test_pawapay_callbacks.py  test_pawapay_client.py  test_pawapay_rail.py  test_pawapay_sandbox_e2e.py  test_pawapay_signatures.py  test_public_routes.py  test_reconciliation.py  test_routing.py  test_security.py  test_seed.py  test_sql_adapters.py  test_staff_accounts.py  test_staff_auth.py  test_staff_console_assets.py  test_state_machine.py  test_ussd.py  test_webhooks.py
services/api/: .env.example  README.md  docker-entrypoint.sh  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: b79d18ed3797_add_idempotency_key_to_transactions.py  d11f02bd69d8_initial_schema.py  d1e2f3a4b5c6_add_merchants_table.py  f3a4b5c6d7e8_add_charges_table.py
services/api/scripts/: pawapay_smoke.py
services/api/src/drc_pay_api/: config.py  main.py  seed.py
services/api/src/drc_pay_api/adapters/: memory.py  sql.py
services/api/src/drc_pay_api/application/: payments.py  webhooks.py
services/api/src/drc_pay_api/domains/: __init__.py
services/api/src/drc_pay_api/domains/charges/: models.py
services/api/src/drc_pay_api/domains/ledger/: __init__.py  ledger.py  money.py
services/api/src/drc_pay_api/domains/recipients/: __init__.py
services/api/src/drc_pay_api/domains/transactions/: models.py  on_net.py  orchestrator.py  ports.py  pricing.py  state_machine.py
services/api/src/drc_pay_api/http/: __init__.py  charge_routes.py  container.py  demo_routes.py  merchant_api.py  merchant_routes.py  public_routes.py  routes.py  schemas.py  ussd_routes.py  webhook_routes.py
services/api/src/drc_pay_api/integrations/: __init__.py  simulated_direct.py
services/api/src/drc_pay_api/integrations/airtel/: __init__.py
services/api/src/drc_pay_api/integrations/mpesa/: rail.py
services/api/src/drc_pay_api/integrations/pawapay/: __init__.py  callbacks.py  client.py  providers.py  (+4 more)
services/api/src/drc_pay_api/ussd/: session.py
services/api/tests/: conftest.py  fakes.py  test_charges.py  test_container.py  test_demo_console.py  test_http.py  test_merchants.py  test_money.py  test_on_net.py  test_on_net_wiring.py  test_orchestrator.py  test_pawapay_callbacks.py  test_pawapay_client.py  test_pawapay_rail.py  test_pawapay_signatures.py  test_public_routes.py  test_reconciliation.py  test_seed.py  test_sql_adapters.py  test_webhooks.py
(+43 files in other folders)
