[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drc-pay-api"
version = "0.0.1"
description = "DRC cross-network payment app — backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "httpx>=0.27",
    "segno>=1.6",
    "cryptography>=42",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "deptry>=0.16",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "sandbox: live pawaPay SANDBOX tests — opt-in, makes real network calls. Skipped unless RUN_PAWAPAY_SANDBOX_E2E=1; never runs in the default offline suite or CI.",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
# Beyond the defaults: bugbear (B), simplify (SIM), return-style (RET), security (S).
extend-select = ["B", "SIM", "RET", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts are the point (S101); the seeded demo credentials are public fixtures,
# not secrets (S105/S106).
"tests/*" = ["S101", "S105", "S106"]

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
# uvicorn is the process entrypoint (Docker CMD) and psycopg the driver behind the
# SQLAlchemy URL — used at runtime, never imported.
DEP002 = ["uvicorn", "psycopg"]
# migrations/env.py imports our own package; it lives outside src/, so deptry
# misreads first-party as transitive.
DEP003 = ["drc_pay_api"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
